add field calculus semantics and scafi chapter

--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,7 @@
 
 \input{src/00-introduction.tex}
 
-\chapter{From distributed systems to Aggregate Programming}\label{chap:history}
+\chapter{Background and state of the art}\label{chap:history}
 
 \input{src/10-history.tex}
 
@@ -30,11 +30,15 @@
 
 \input{src/40-scafi.tex}
 
+\chapter{Differences between Scafi semantics and field calculus}\label{chap:comparison}
+
+\input{src/45-comparison.tex}
+
 \chapter{Kotlin}\label{chap:kotlin}
 
 \input{src/50-kotlin.tex}
 
-\chapter{Kotac}\label{chap:kotac}
+\chapter{KotAC}\label{chap:kotac}
 
 \input{src/60-kotac.tex}
 
