--- a/macrosMain.tex
+++ b/macrosMain.tex
@@ -91,14 +91,18 @@ body}}
 \newcommand{\repK}{\mathtt{rep}}
 \newcommand{\shareK}{\mathtt{share}}
 \newcommand{\fifK}{\mathtt{if}}
+\newcommand{\elseK}{\mathtt{else}}
 \newcommand{\ifK}{\mathtt{branch}}
 \newcommand{\foldK}{\mathtt{foldhood}}
 \newcommand{\foldexclK}{\mathtt{foldhoodPlus}}
 \newcommand{\foldincK}{\mathtt{foldincl}}
+\newcommand{\letK}{\mathtt{let}\;}
+\newcommand{\inK}{\;\mathtt{in}\;}
 
 \newcommand{\aggrK}{@@}
 \newcommand{\eqSymK}[1]{\mathrm{ \texttt{= \aggrK \{} #1 \texttt{\}} }}
 \newcommand{\ftoSymK}[1]{\mathrm{ \texttt{=>\{}#1\texttt{\}} }}
+\newcommand{\ftoSym}[1]{\mathrm{ \texttt{=>}#1 }}
 \newcommand{\toSymK}[1]{\mathrm{ \texttt{=> \aggrK\{} #1 \texttt{\}} }}
 \newcommand{\toSymKtag}[2]{\toSym{#1}\mathrm{ \texttt{\aggrK\{} #2 \texttt{\}}}}
 \newcommand{\toSymKabs}[1]{\mathrm{ \texttt{=>} #1  }}
@@ -350,3 +354,12 @@ body}}
 \newcommand{\restatement}[4]{\noindent \textbf{Restatement of #1 \ref{#2} (#3).} \textit{#4}}
 
 \newcommand{\ifKhfc}{\mathtt{if}}
+
+\newcommand{\corrstart}{}%{\color{magenta}}
+\newcommand{\corrend}{}%{\color{black}}
+\newcommand{\correction}[1]{\corrstart #1\corrend{}}
+
+\newcommand{\corrstartB}{\color{magenta}}
+\newcommand{\correndB}{\color{black}}
+\newcommand{\correctionB}[1]{\corrstartB #1\correndB{}}
+
