--- a/src/bibliography.bib
+++ b/src/bibliography.bib
@@ -119,10 +119,20 @@ author = {EPFL},
 title = {The Scala Programmign Language},
 howpublished = {https://scala-lang.org/}
 }
+@mist{Kotlin,
+author = {Jetbrains},
+title = {Kotlin Programmign Language},
+howpublished = {https://kotlinlang.org/}
+}
 @mist{Akka,
 author = {Lightbend},
 title = {Akka: build concurrent, distributed, and resilient message-driven applications for Java and Scala},
 howpublished = {https://akka.io/}
+}
+@mist{Android,
+author = {Google LLC},
+title = {Android | The platform pushing what’s possible},
+howpublished = {https://www.android.com/}
 }
 @phdthesis{scafiphd,
             year = {2020},
