--- a/src/30-protelis.tex
+++ b/src/30-protelis.tex
@@ -2,7 +2,7 @@ Protelis \cite{Protelis} is a Domain Specific Language providing a practical imp
 
 \begin{figure}[t]
 \centering
-\centerline{\framebox[\linewidth]{$
+\centerline{$
         \begin{array}{lcl@{\hspace{18mm}}r}
                 \PROGRAM & \BNFcce & \overline{\IMPORT} \; \overline{\FUNCTION}  \; \overline{\mathtt{s}};
                 &{ \mbox{\footnotesize Program}}
@@ -28,7 +28,7 @@ Protelis \cite{Protelis} is a Domain Specific Language providing a practical imp
                 && \nbrK\{\overline{\mathtt{s}}';\} &{ \mbox{\footnotesize Neighbourhood values}}
                 \\[3pt]
         \end{array}
-        $}
+        $
 }
 \caption{Abstract syntax of the Protelis language from \cite{Protelis}} \label{fig:protelissyntax}
 \end{figure}
