--- a/src/bibliography.bib
+++ b/src/bibliography.bib
@@ -143,3 +143,143 @@ howpublished = {https://www.android.com/}
         keywords = {computational collective intelligence; collective processes; multi-agent systems; cyber-physical systems; self-adaptive systems; self-organisation; coordination; distributed computing; programming languages; situated systems; space-time programming; aggregate computing; edge computing},
              url = {http://amsdottorato.unibo.it/9380/}
 }
+@article{Survey,
+author = {Viroli, Mirko and Beal, Jacob and Damiani, Ferruccio and Audrito, Giorgio and Casadei, Roberto and Pianini, Danilo},
+year = {2019},
+month = {09},
+pages = {100486},
+title = {From distributed coordination to field calculus and aggregate computing},
+volume = {109},
+journal = {Journal of Logical and Algebraic Methods in Programming},
+doi = {10.1016/j.jlamp.2019.100486}
+}
+@article{Linda,
+author = {Gelernter, David},
+title = {Generative Communication in Linda},
+year = {1985},
+issue_date = {Jan. 1985},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {7},
+number = {1},
+issn = {0164-0925},
+url = {https://doi.org/10.1145/2363.2433},
+doi = {10.1145/2363.2433},
+journal = {ACM Trans. Program. Lang. Syst.},
+month = jan,
+pages = {80–112},
+numpages = {33}
+}
+@article{SharedProlog,
+author = {Gelernter, David},
+title = {Generative Communication in Linda},
+year = {1985},
+issue_date = {Jan. 1985},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {7},
+number = {1},
+issn = {0164-0925},
+url = {https://doi.org/10.1145/2363.2433},
+doi = {10.1145/2363.2433},
+journal = {ACM Trans. Program. Lang. Syst.},
+month = jan,
+pages = {80–112},
+numpages = {33}
+}
+@book{freeman1999javaspaces,
+  title={JavaSpaces principles, patterns, and practice},
+  author={Freeman, Eric and Hupfer, Susanne and Arnold, Ken},
+  year={1999},
+  publisher={Addison-Wesley Professional}
+}
+@ARTICLE{TSapces,  author={P. {Wyckoff} and S. W. {McLaughry} and T. J. {Lehman} and D. A. {Ford}},  journal={IBM Systems Journal},   title={T Spaces},   year={1998},  volume={37},  number={3},  pages={454-474},}
+@article{Lime,
+author = {Murphy, Amy L. and Picco, Gian Pietro and Roman, Gruia-Catalin},
+title = {LIME: A Coordination Model and Middleware Supporting Mobility of Hosts and Agents},
+year = {2006},
+issue_date = {July 2006},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {15},
+number = {3},
+issn = {1049-331X},
+url = {https://doi.org/10.1145/1151695.1151698},
+doi = {10.1145/1151695.1151698},
+journal = {ACM Trans. Softw. Eng. Methodol.},
+month = jul,
+pages = {279–328},
+numpages = {50},
+keywords = {tuple spaces, middleware, Mobile computing}
+}
+@ARTICLE{Klaim,  author={R. {De Nicola} and G. L. {Ferrari} and R. {Pugliese}},  journal={IEEE Transactions on Software Engineering},   title={KLAIM: a kernel language for agents interaction and mobility},   year={1998},  volume={24},  number={5},  pages={315-330},}
+@inproceedings{SwarmLinda,
+  title={Using swarm intelligence in linda systems},
+  author={Tolksdorf, Robert and Menezes, Ronaldo},
+  booktitle={International Workshop on Engineering Societies in the Agents World},
+  pages={49--65},
+  year={2003},
+  organization={Springer}
+}
+@InProceedings{CoField,
+author="Mamei, Marco
+and Zambonelli, Franco
+and Leonardi, Letizia",
+editor="Petta, Paolo
+and Tolksdorf, Robert
+and Zambonelli, Franco",
+title="Co-Fields: Towards a Unifying Approach to the Engineering of Swarm Intelligent Systems",
+booktitle="Engineering Societies in the Agents World III",
+year="2003",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="68--81",
+isbn="978-3-540-39173-9"
+}
+@inproceedings{EvolvingTuples,
+author = {Stovall, Drew and Julien, Christine},
+title = {Resource Discovery with Evolving Tuples},
+year = {2007},
+isbn = {9781595937988},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1294904.1294905},
+doi = {10.1145/1294904.1294905},
+booktitle = {International Workshop on Engineering of Software Services for Pervasive Environments: In Conjunction with the 6th ESEC/FSE Joint Meeting},
+pages = {1–10},
+numpages = {10},
+keywords = {pervasive computing, evolving tuples, tuples, resource discovery},
+location = {Dubrovnik, Croatia},
+series = {ESSPE '07}
+}
+@inproceedings{Hood,
+  title={Hood: a neighborhood abstraction for sensor networks},
+  author={Whitehouse, Kamin and Sharp, Cory and Brewer, Eric and Culler, David},
+  booktitle={Proceedings of the 2nd international conference on Mobile systems, applications, and services},
+  pages={99--110},
+  year={2004}
+}
+@phdthesis{GrowingPoint,
+  title={Botanical computing: a developmental approach to generating interconnect topologies on an amorphous computer},
+  author={Coore, Daniel},
+  year={1999},
+  school={Massachusetts Institute of Technology}
+}
+@article{TinyDB,
+author = {Madden, Samuel and Franklin, Michael J. and Hellerstein, Joseph M. and Hong, Wei},
+title = {TAG: A Tiny AGgregation Service for Ad-Hoc Sensor Networks},
+year = {2003},
+issue_date = {Winter 2002},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {36},
+number = {SI},
+issn = {0163-5980},
+url = {https://doi.org/10.1145/844128.844142},
+doi = {10.1145/844128.844142},
+journal = {SIGOPS Oper. Syst. Rev.},
+month = dec,
+pages = {131–146},
+numpages = {16}
+}
+@ARTICLE{Proto,  author={J. {Beal} and J. {Bachrach}},  journal={IEEE Intelligent Systems},   title={Infrastructure for engineered emergence on sensor/actuator networks},   year={2006},  volume={21},  number={2},  pages={10-19},}
